source/blender/blenkernel/BKE_mesh.hh
@@ -319,8 +319,8 @@ void mesh_vert_normals_assign(Mesh &mesh, Span<float3> vert_normals);
 /** Set mesh vertex normals to known-correct values, avoiding future lazy computation. */
 void mesh_vert_normals_assign(Mesh &mesh, Vector<float3> vert_normals);
 
-void mesh_smooth_set(Mesh &mesh, bool use_smooth);
-void mesh_sharp_edges_set_from_angle(Mesh &mesh, float angle);
+void mesh_smooth_set(Mesh &mesh, bool use_smooth, bool keep_sharp_edges = false);
+void mesh_sharp_edges_set_from_angle(Mesh &mesh, float angle, bool keep_sharp_edges = false);
 
 /** Make edge and face visibility consistent with vertices. */
 void mesh_hide_vert_flush(Mesh &mesh);
